Added navbar (sort of)

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,22 @@
-<p>navbar works!</p>
+<div class="d-flex flex-column align-items-start p-3 vh-100 border-end sidebar">
+  <!-- Logo -->
+  <a href="#" class="d-flex align-items-center mb-4 text-decoration-none logo">
+    <img src="" alt="" width="120" />
+  </a>
+
+  <!-- Navigation Links -->
+
+  <!-- Profile -->
+  <div class="mt-auto">
+    <a href="#" class="nav-link d-flex align-items-center gap-3 text-dark">
+      <img
+        src="assets/user_profile_picture.jpeg"
+        alt="Profile picture"
+        class="rounded-circle"
+        width="30"
+        height="30"
+      />
+      <span class="d-none d-xl-inline">Profile</span>
+    </a>
+  </div>
+</div>
