--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
   <div class="mt-auto">
     <a href="#" class="nav-link d-flex align-items-center gap-3 text-dark">
       <img
-        src="assets/user_profile_picture.jpeg"
+        src="../../assets/user_profile_picture.jpeg"
         alt="Profile picture"
         class="rounded-circle"
         width="30"
