Added settings icon to navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,10 @@
-<div class="d-flex flex-column align-items-start p-3 vh-100 border-end sidebar">
+<div
+  class="d-flex flex-column align-items-center p-3 vh-100 border-end sidebar"
+>
   <!-- Logo -->
-  <a href="#" class="d-flex align-items-center mb-4 text-decoration-none logo">
+  <!-- <a href="#" class="d-flex align-items-center mb-4 text-decoration-none logo">
     <img src="" alt="" width="120" />
-  </a>
+  </a> -->
 
   <!-- Navigation Links -->
   <ul class="nav nav-pills flex-column w-100">
