Added fit-picture class, still doesn't actually display picture

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
   </ul>
   <!-- Profile -->
   <div class="mt-auto">
-    <a href="#" class="nav-link d-flex align-items-center gap-3 text-dark">
+    <a href="#" class="fit-picture nav-link d-flex align-items-center gap-3 text-dark">
       <img
         src="../../assets/user_profile_picture.jpeg"
         alt="Profile picture"
