--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,8 @@
-
-<main class="main">
-  <div class="content">
-    <div class="nav-bar">
-      <app-navbar></app-navbar>
-    </div>
-    <div class="left-side"></div>
-    <div class="divider" role="separator" aria-label="Divider"></div>
-    <div class="right-side"></div>
+<div class="main">
+  <div class="nav-bar">
+    <app-navbar></app-navbar>
   </div>
-</main>
-
-<router-outlet />
+  <div class="content-area">
+    <router-outlet />
+  </div>
+</div>
