--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <main class="main">
+  <div class="search-container">
+    <app-search></app-search>
+  </div>
+
   <div class="content">
-    <div class="nav-bar">
+    <div class="side-nav">
       <app-navbar></app-navbar>
     </div>
-    <div class="left-side"></div>
-    <div class="divider" role="separator" aria-label="Divider"></div>
-    <div class="right-side"></div>
+    <div class="main-content">
+      <!-- Recipe content here -->
+      <router-outlet />
+    </div>
   </div>
 </main>
-
-<router-outlet />
-
