--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,25 +1,19 @@
-<div
-  class="d-flex flex-column align-items-center p-3 vh-100 border-end sidebar"
->
-  <!-- Logo -->
-  <!-- <a href="#" class="d-flex align-items-center mb-4 text-decoration-none logo">
-    <img src="" alt="" width="120" />
-  </a> -->
-
+<div class="d-flex flex-column align-items-center p-3 vh-100 border-end sidebar" [class.collapsed]="!(isExpanded$ | async)">
   <!-- Navigation Links -->
   <ul class="nav nav-pills flex-column w-100">
     @for (item of navItems; track item) {
     <li class="nav-item mb-3">
       <a href="#" class="nav-link d-flex align-items-center gap-3 text-dark">
         <i [class]="item.icon"></i>
-        <span class="d-none d-xl-inline">{{ item.label }}</span>
+        <span>{{ item.label }}</span>
       </a>
     </li>
     }
   </ul>
+
   <!-- Profile -->
   <div class="mt-auto">
-    <a href="#" class="fit-picture nav-link d-flex align-items-center gap-3 text-dark">
+    <a href="#" class="nav-link d-flex align-items-center gap-3 text-dark">
       <img
         src="../../assets/user_profile_picture.jpeg"
         alt="Profile picture"
@@ -27,7 +21,7 @@
         width="30"
         height="30"
       />
-      <span class="d-none d-xl-inline">Profile</span>
+      <span>Profile</span>
     </a>
   </div>
 </div>
