--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<div class="recipe-grid">
+  @for (recipe of recipes; track recipe.id) {
+    <div class="recipe-card">
+      <img [src]="recipe.image" [alt]="recipe.title" class="recipe-image">
+      <div class="recipe-info">
+        <h3 class="recipe-title">{{ recipe.title }}</h3>
+        <div class="recipe-stats">
+          <span class="stat">
+            <i class="bi bi-heart-fill"></i> {{ recipe.likes }}
+          </span>
+          <span class="stat">
+            <i class="bi bi-bookmark-fill"></i> {{ recipe.saves }}
+          </span>
+        </div>
+      </div>
+    </div>
+  }
+</div>
