--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -9,7 +9,9 @@
     >
       <i class="bi bi-list"></i>
     </button>
-    <span class="fw-bold fs-4">DishDash</span>
+    <a routerLink="/" class="text-decoration-none text-dark">
+      <span class="fw-bold fs-4">DishDash</span>
+    </a>
   </div>
 
   <!-- Center section with search -->
