--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,37 +1,52 @@
-<div class="d-flex flex-column align-items-center p-3 border-end sidebar" [class.collapsed]="!(isExpanded$ | async)">
+<div
+  class="d-flex flex-column align-items-center p-3 border-end sidebar"
+  [class.collapsed]="!(isExpanded$ | async)"
+>
   <!-- Navigation Links -->
   <ul class="nav nav-pills flex-column w-100">
     @for (item of navItems; track item) {
-    <li class="nav-item mb-3">
-      <a [routerLink]="item.route" class="nav-link d-flex align-items-center gap-3 text-dark">
-        <i [class]="item.icon"></i>
-        <span>{{ item.label }}</span>
-      </a>
-    </li>
+      <li class="nav-item mb-3">
+        <a
+          [routerLink]="item.route"
+          class="nav-link d-flex align-items-center gap-3 text-dark"
+        >
+          <i [class]="item.icon"></i>
+          <span>{{ item.label }}</span>
+        </a>
+      </li>
     }
   </ul>
 
   <!-- Profile -->
   <div class="profile">
-    <div *ngIf="user">
-      <a routerLink="user-profile" class="nav-link d-flex align-items-center gap-3 text-dark">
-        <img
-          [src]="getProfilePicture()"
-          [alt]="user.username + '\'s profile picture'"
-          class="profile-img"
-        />
-        <span>{{ user.username }}</span>
-      </a>
-    </div>
-    <div *ngIf="!user">
-      <a routerLink="/login" class="nav-link d-flex align-items-center gap-3 text-dark">
-        <img
-          src="assets/default-avatar.png"
-          alt="Default profile picture"
-          class="profile-img"
-        />
-        <span>Login</span>
-      </a>
-    </div>
+    @if (user) {
+      <div>
+        <a
+          routerLink="user-profile"
+          class="nav-link d-flex align-items-center gap-3 text-dark"
+        >
+          <img
+            [src]="getProfilePicture()"
+            [alt]="user.username + '\'s profile picture'"
+            class="profile-img"
+          />
+          <span>{{ user.username }}</span>
+        </a>
+      </div>
+    } @else {
+      <div *ngIf="!user">
+        <a
+          routerLink="/login"
+          class="nav-link d-flex align-items-center gap-3 text-dark"
+        >
+          <img
+            src="assets/default-avatar.png"
+            alt="Default profile picture"
+            class="profile-img"
+          />
+          <span>Login</span>
+        </a>
+      </div>
+    }
   </div>
 </div>
