Removed search, added liked to navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,8 +33,7 @@
           <span>{{ user.username }}</span>
         </a>
       </div>
-    }
-    @else {
+    } @else {
       <div>
         <a
           routerLink="/login"
