tried to add filters but it just made it worse

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -16,7 +16,7 @@
 
   <!-- Center section with search -->
   <div class="col-6">
-    <form class="d-flex" role="search">
+    <form (submit)="onSubmit($event)">
       <div class="searchContainer">
         <input
           class="form-control me-2 search-bar container-contents"
