firebase profile connection

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,10 +21,9 @@
   <div class="profile">
     @if (user) {
       <div>
-        <a
-          routerLink="user-profile"
-          class="nav-link d-flex align-items-center gap-3 text-dark"
-        >
+        <a (click)="navigateToProfile()" 
+           class="nav-link d-flex align-items-center gap-3 text-dark"
+           style="cursor: pointer;">
           <img
             [src]="getProfilePicture()"
             [alt]="user.username + '\'s profile picture'"
