--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -102,10 +102,8 @@
           </div>
         </li>
         <li>
-          <a
-            class="dropdown-item d-flex align-items-center gap-2"
-            routerLink="/user-profile"
-          >
+          <a class="dropdown-item d-flex align-items-center gap-2"
+             (click)="navigateToProfile()">
             <i class="bi bi-person"></i>
             My Profile
           </a>
