--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,9 @@
+h2 {
+  margin-bottom: 2rem;
+  font-family: 'Playfair Display', serif;
+  color: #333;
+}
+
 .recipe-grid {
   columns: 3;
   column-gap: 2rem;
