--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -5,9 +5,15 @@
     max-width: 1000px;
     margin: auto;
     padding: 2rem;
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', serif;
   }
   
+  h2 {
+    margin-bottom: 1rem;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #333;
+  }
+
   .profile-header {
     display: flex;
     align-items: center;
