Added edit and delete buttons to recipe page. Only delete currently operates correctly.

--- a/src/app/recipe/recipe.component.css
+++ b/src/app/recipe/recipe.component.css
@@ -123,6 +123,10 @@ li {
     font-weight: 500;
 }
 
+button {
+    margin: 5px;
+}
+
 /* Responsive design */
 @media (max-width: 768px) {
     .recipe-header-grid {
