--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -150,13 +150,13 @@
         <li><hr class="dropdown-divider" /></li>
 
         <!-- Appearance and Settings -->
-        <li>
+        <!-- <li>
           <a class="dropdown-item d-flex align-items-center gap-2" href="#">
             <i class="bi bi-palette"></i>
             Appearance
             <i class="bi bi-chevron-right ms-auto"></i>
           </a>
-        </li>
+        </li> -->
         <li>
           <a
             class="dropdown-item d-flex align-items-center gap-2"
@@ -164,6 +164,15 @@
           >
             <i class="bi bi-gear"></i>
             Settings
+          </a>
+        </li>
+        <li>
+          <a
+            class="dropdown-item d-flex align-items-center gap-2"
+            routerLink="/contact-us"
+          >
+            <i class="bi bi-envelope-paper"></i>
+            Contact Us
           </a>
         </li>
         <li>
