--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -178,6 +178,15 @@
         <li>
           <a
             class="dropdown-item d-flex align-items-center gap-2"
+            routerLink="/about-us"
+          >
+            <i class="bi bi-envelope-paper"></i>
+            About Us
+          </a>
+        </li>
+        <li>
+          <a
+            class="dropdown-item d-flex align-items-center gap-2"
             (click)="signOut()"
           >
             <i class="bi bi-box-arrow-right"></i>
