--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -56,6 +56,11 @@
     }
   }
 
+  .nav-link.active {
+    background-color: lightpink;
+    color: black;
+  }
+
   .nav-link {
     font-size: 1rem;
     padding: 0.75rem 1rem;
