Fixed default profile image path, still doesn't display for some reason

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -199,7 +199,7 @@
     <div *ngIf="!user">
       <a routerLink="/login" class="nav-link d-flex align-items-center gap-2">
         <img
-          src="assets/default-avatar.png"
+          src="../../assets/user_profile_picture.jpeg"
           alt="Default profile picture"
           class="profile-img"
         />
