--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -43,7 +43,7 @@
           class="nav-link d-flex align-items-center gap-3 text-dark"
         >
           <img
-            src="assets/default-avatar.png"
+            src="../../assets/user_profile_picture.jpeg"
             alt="Default profile picture"
             class="profile-img"
           />
